Update cors config